--- a/front_end/src/assets/user-page/main.css
+++ b/front_end/src/assets/user-page/main.css
@@ -4,7 +4,8 @@
 /* ==================================================================================== */
 /* header */
 .header{
-    background-image:linear-gradient(0,#fe6433,#f53e2d) ;
+    /* background-image:linear-gradient(0,#fe6433,#f53e2d) ; */
+    background-image: var(--gradient1-color);
     height: var(--header-height);
     position: fixed;
     z-index: 10;
@@ -610,7 +611,7 @@
     border-radius: 3px;
 }
 .hd__search-btn{
-    background-color: var(--primary-color);
+    background-image: var(--gradient2-color);
     border: none;
     height: 34px;
     border-radius: 3px;
@@ -920,6 +921,9 @@
     color: var(--primary-color);
     margin-left: 4px;
 }
+.hidden{
+    display: none;
+}
 .home-product-item__action{
     display: flex;
     justify-content: space-between;
@@ -1009,7 +1013,7 @@
     color: var(--primary-color);
     font-weight: 600;
     font-size: 1.3rem;
-    line-height: 1.3rem;
+    line-height: 3.3rem;
 }
 .home-product-item__sale-off-label{
     color: var(--white-color);
@@ -1305,6 +1309,7 @@
 }
 .slider-show_img img{
     width: 100%;
+
 }
 .slick-prev,.slick-next{
     position: absolute;
@@ -1402,7 +1407,9 @@
     padding-bottom: 50px;
 }
 .slider-product-item{
-    margin: 0 5px;
+    /* margin: 0 5px; */
+    padding: 0 5px;
+
 }
 /* .change_img img:last-child{
     display: none;
@@ -1484,9 +1491,9 @@
     text-align: center;
     font-size: 1.4rem;
     color: var(--text-color);
-    line-height: 2rem;
+    line-height: 2.2rem;
     margin: 0 0 15px; 
-    height: 6rem;
+    height: 8rem;
     overflow: hidden;
     display: block;
     display: -webkit-box; 
@@ -1601,7 +1608,7 @@
     position: fixed;
     width: 40px;
     height: 40px;
-    background-color: var(--primary-color);
+    background-image: var(--gradient1-color);
     display: flex;
     border-radius: 50%;
     justify-content: center;
