--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -1,6 +1,8 @@
 /* gán 1 số thuộc tính */
 :root{
   --primary-color:#f95530;
+  --gradient1-color: linear-gradient( 109.6deg,  rgba(5,84,94,1) 16%, #bbb 91.1% );
+  --gradient2-color: linear-gradient( 109.6deg,  rgba(255,174,0,1) 11.2%, rgba(255,0,0,1) 100.2% );
   --white-color:#fff;
   --white2-color:#ededed;
   --white3-color:#f6f6f6;
@@ -30,7 +32,7 @@ html{
 body::-webkit-scrollbar {
   width: 0.5em;
 }
- 
+
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px var(--text2-color);
 }
