--- a/front_end/src/assets/user-page/main.css
+++ b/front_end/src/assets/user-page/main.css
@@ -1672,8 +1672,24 @@
 }
 .main-content-price span{
     font-size: 1.8rem;
-    color: var(--primary-color);
+    /* color: var(--primary-color); */
     font-weight: 800;
+}
+.no_btn{
+    background-image: var(--gradient1-color);
+    cursor: not-allowed !important;
+    pointer-events: auto;
+}
+.main-content-price{
+    position: relative;
+}
+.discount-price{
+    position: absolute;
+    top: -19px;
+    left: 115px;
+}
+.discount-price span{
+    font-size: 1.4rem;
 }
 .main-content-list{
     list-style: none;
@@ -2040,7 +2056,7 @@
     font-size: 1.6rem;
     color: var(--text-color);
     line-height: 2rem;
-    height: 4rem;
+    height: 5.7rem;
     overflow: hidden;
     display: block;
     display: -webkit-box; 
@@ -3281,3 +3297,71 @@
     font-size: 1.5rem;
     color: var(--white-color);
 }
+/* hiệu ứng loading */
+.sk-cube-grid {
+    width: 40px;
+    height: 40px;
+    margin: 100px auto;
+  }
+  
+  .sk-cube-grid .sk-cube {
+    width: 33%;
+    height: 33%;
+    background-color: #333;
+    float: left;
+    -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+            animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+  }
+  .sk-cube-grid .sk-cube1 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+  .sk-cube-grid .sk-cube2 {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s; }
+  .sk-cube-grid .sk-cube3 {
+    -webkit-animation-delay: 0.4s;
+            animation-delay: 0.4s; }
+  .sk-cube-grid .sk-cube4 {
+    -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s; }
+  .sk-cube-grid .sk-cube5 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+  .sk-cube-grid .sk-cube6 {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s; }
+  .sk-cube-grid .sk-cube7 {
+    -webkit-animation-delay: 0s;
+            animation-delay: 0s; }
+  .sk-cube-grid .sk-cube8 {
+    -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s; }
+  .sk-cube-grid .sk-cube9 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+  
+  @-webkit-keyframes sk-cubeGridScaleDelay {
+    0%, 70%, 100% {
+      -webkit-transform: scale3D(1, 1, 1);
+              transform: scale3D(1, 1, 1);
+    } 35% {
+      -webkit-transform: scale3D(0, 0, 1);
+              transform: scale3D(0, 0, 1); 
+    }
+  }
+  
+  @keyframes sk-cubeGridScaleDelay {
+    0%, 70%, 100% {
+      -webkit-transform: scale3D(1, 1, 1);
+              transform: scale3D(1, 1, 1);
+    } 35% {
+      -webkit-transform: scale3D(0, 0, 1);
+              transform: scale3D(0, 0, 1);
+    } 
+  }
+
+  .tabs__list-item {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; /* Thêm dấu ... cho nội dung quá dài */
+  }
