--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -93,8 +93,18 @@ body::-webkit-scrollbar-thumb:hover{
   left: 0;
   display: flex;
   animation: fadein linear 0.1s;
-  z-index: 10;
+  z-index: 100;
   display: none;
+}
+.modal{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  animation: fadein linear 0.1s;
+  z-index: 100;
 }
 .modal-register
 {
@@ -105,7 +115,7 @@ body::-webkit-scrollbar-thumb:hover{
   left: 0;
   display: flex;
   animation: fadein linear 0.1s;
-  z-index: 10;
+  z-index: 100;
   display: none;
 }
 .open{
@@ -116,6 +126,9 @@ body::-webkit-scrollbar-thumb:hover{
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,.4);
+}
+.modal_color{
+  background-image: var(--gradient1-color);
 }
 .modal__body{
   --growth-from:0.7;
