--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -29,15 +29,15 @@ html{
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
-body::-webkit-scrollbar {
-  width: 0.5em;
+body::-webkit-scrollbar,.tabs-content::-webkit-scrollbar,.table-responsive::-webkit-scrollbar {
+  width: 0.2em;
 }
 
-body::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track{
   box-shadow: inset 0 0 6px var(--text2-color);
 }
  
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,.tabs-content::-webkit-scrollbar-thumb,.table-responsive::-webkit-scrollbar-thumb{
   background-color: var(--primary-color);
   outline: 1px solid var(--primary-color);
   border-radius: 20px;
