Successfully implemented the functionality to add products to the shopping cart, allowing for quantity adjustment, individual item removal, and clearing the entire cart. Handled exceptions when the cart is empty and fixed interface inconsistencies, along with addressing several bugs.

--- a/front_end/src/assets/user-page/main.css
+++ b/front_end/src/assets/user-page/main.css
@@ -3606,5 +3606,13 @@
   .footer_cutomer_p {
     font-size: 1.2rem;
   }
-  
-
+/* CSS PHẦN NO CART */
+.no_cart_text{
+    color: var(--primary-color);
+    font-size: 3em;
+    text-align: center;
+}
+.no_cart_img{
+    width: 100%;
+    height: 100%;
+}
